--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,24 +38,27 @@ jobs:
           arm: "7"
           runner: ubuntu-latest
 
-        - target_os: freebsd
-          target_arch: amd64
-          host_os: linux
-          host_arch: amd64
-          runner: ubuntu-latest
+        # TODO: FreeBSD builds require cgo and FreeBSD
+        #       system headers.
 
-        - target_os: freebsd
-          target_arch: arm64
-          host_os: linux
-          host_arch: amd64
-          runner: ubuntu-latest
+        # - target_os: freebsd
+        #   target_arch: amd64
+        #   host_os: linux
+        #   host_arch: amd64
+        #   runner: ubuntu-latest
 
-        - target_os: freebsd
-          target_arch: arm
-          host_os: linux
-          host_arch: amd64
-          arm: "7"
-          runner: ubuntu-latest
+        # - target_os: freebsd
+        #   target_arch: arm64
+        #   host_os: linux
+        #   host_arch: amd64
+        #   runner: ubuntu-latest
+
+        # - target_os: freebsd
+        #   target_arch: arm
+        #   host_os: linux
+        #   host_arch: amd64
+        #   arm: "7"
+        #   runner: ubuntu-latest
 
         - target_os: darwin
           target_arch: arm64
@@ -142,7 +145,7 @@ jobs:
       
     - name: Lint
       if: ${{ matrix.host_os != 'windows' }}
-      run: make lint LINT_OPTS=--timeout=10m
+      run: make lint LINT_OPTS=--timeout=15m
 
     - name: Run tests
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os != 'windows' }}
