--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,9 +128,9 @@ jobs:
             make
 
     - name: Setup Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.19.2
+        go-version-file: go.mod
         check-latest: true
         cache: true
     
