ci: fix Go version in GitHub workflows
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/test-website.yaml
+++ b/.github/workflows/test-website.yaml
@@ -28,11 +28,10 @@ jobs:
             libpcap-dev
 
     - name: Setup Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
       with:
-        go-version: 1.19.2
+        go-version-file: go.mod
         check-latest: true
-        cache: true
     
     - name: Install build and test dependencies
       run: make install-deps
