--- a/website/package.json
+++ b/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wice",
+  "name": "cunicu",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -15,21 +15,20 @@
   },
   "dependencies": {
     "@cmfcmf/docusaurus-search-local": "^0.11.0",
-    "@docusaurus/core": "^2.1.0",
-    "@docusaurus/preset-classic": "^2.1.0",
+    "@docusaurus/core": "^2.4.0",
+    "@docusaurus/preset-classic": "^2.4.0",
     "@gabrielcsapo/docusaurus-plugin-matomo": "^0.1.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "hast-util-is-element": "1.1.0",
-    "mdx-mermaid": "^2.0.0-rc2",
-    "mermaid": "^9.1.6",
+    "mdx-mermaid": "^1.3.2",
+    "mermaid": "^10.2.0",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-katex": "5",
-    "remark-math": "3",
-    "unist-util-visit": "^4.1.0"
+    "remark-math": "3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.1.0"
