silence goreleaser deprecation warning
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -98,6 +98,8 @@ archives:
   - goos: windows
     format: zip
 
+  rlcp: true
+
 nfpms:
 - vendor: stv0g
   homepage: https://github.com/stv0g/cunicu/
