website: fix build in CI

--- a/.github/workflows/test-website.yaml
+++ b/.github/workflows/test-website.yaml
@@ -6,6 +6,9 @@
 name: Test build of website
 
 on:
+  push:
+    branches:
+    - master
   pull_request:
     branches:
     - master
@@ -44,15 +47,31 @@ jobs:
       run: make docs
       working-directory: ./
   
-    - name: Setup Node.js
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 18
-        cache: yarn
-        cache-dependency-path: website/yarn.lock
+        node-version: 20
+
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
+      shell: bash
+
+    - name: Restore yarn cache
+      uses: actions/cache@v3
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: yarn-cache-folder-${{ hashFiles('**/yarn.lock', '.yarnrc.yml') }}
+        restore-keys: |
+          yarn-cache-folder-
+
+    - name: Set up yarn
+      run: |
+        corepack enable
+        corepack prepare yarn@stable --activate
 
     - name: Install dependencies
-      run: yarn install --frozen-lockfile
+      run: yarn install --immutable
 
-    - name: Test build website
+    - name: Build website
       run: yarn build
