--- a/website/package.json
+++ b/website/package.json
@@ -17,18 +17,18 @@
     "@cmfcmf/docusaurus-search-local": "^0.11.0",
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/preset-classic": "^2.4.0",
+    "@docusaurus/theme-mermaid": "^2.4.1",
     "@gabrielcsapo/docusaurus-plugin-matomo": "^0.1.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "hast-util-is-element": "1.1.0",
-    "mdx-mermaid": "^1.3.2",
-    "mermaid": "^10.2.0",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-katex": "5",
-    "remark-math": "3"
+    "remark-math": "3",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.1.0"
