--- a/.github/workflows/reuse.yaml
+++ b/.github/workflows/reuse.yaml
@@ -5,7 +5,11 @@
 ---
 name: REUSE Compliance Check
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - master
+  pull_request:
 
 jobs:
   test:
