--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -156,7 +156,7 @@ jobs:
 
     - name: Run tests for Windows # which has no sudo
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os == 'windows' }}
-      run: make tests GINKGO_EXTRA_OPTS="--label-filter=!broken-on-windows"
+      run: make tests GINKGO_OPTS="--label-filter=!broken-on-windows"
 
     - name: Run end-to-end tests
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os == 'linux' }}
