Add JSONSchema for configuration file
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redocusaurus": "^1.6.3",
     "rehype-katex": "5",
     "remark-math": "3",
     "unist-util-visit": "^4.1.2"
