--- a/docs/config/_category_.yaml
+++ b/docs/config/_category_.yaml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
 # SPDX-License-Identifier: Apache-2.0
-
-position: 10
-label: "Usage"
+---
+position: 20
+label: "Configuration"
 collapsible: true
 collapsed: true
