--- a/docs/usage/_category_.yaml
+++ b/docs/usage/_category_.yaml
@@ -1,7 +1,7 @@
 # SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
 # SPDX-License-Identifier: Apache-2.0
-
-position: 9
-label: "Features"
+---
+position: 10
+label: "Usage"
 collapsible: true
 collapsed: true
