--- a/etc/cunicu.advanced.yaml
+++ b/etc/cunicu.advanced.yaml
@@ -1,5 +1,7 @@
 # SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
 # SPDX-License-Identifier: Apache-2.0
+# yaml-language-server: $schema=https://cunicu.li/schemas/config.yaml
+---
 
 # An interval at which cunīcu will periodically check for added,
 # removed or modified WireGuard interfaces.
