doc(website): Use bash scripts to generate static redirect pages
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -42,7 +42,7 @@ jobs:
       working-directory: ./
 
     - name: Generate docs
-      run: make docs
+      run: make docs redirects
       working-directory: ./
 
     - name: Set up Node.js
