--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -11,6 +11,11 @@ issues:
   - path: '(.+)_test\.go'
     linters:
     - gochecknoglobals
+  - path: '(.+)_test\.go'
+    linters:
+    - revive
+    text: dot-imports
+    source: (ginkgo|gomega)
   - path: 'test/(.+)'
     text: do not define dynamic errors, use wrapped static errors instead
 
