--- a/website/package.json
+++ b/website/package.json
@@ -15,24 +15,24 @@
   },
   "dependencies": {
     "@cmfcmf/docusaurus-search-local": "^1.0.0",
-    "@docusaurus/core": "^2.4.1",
-    "@docusaurus/preset-classic": "^2.4.1",
-    "@docusaurus/theme-mermaid": "^2.4.1",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
+    "@docusaurus/theme-mermaid": "^3.0.0",
     "@gabrielcsapo/docusaurus-plugin-matomo": "^0.1.2",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "hast-util-is-element": "1.1.0",
-    "prism-react-renderer": "^2.0.5",
+    "prism-react-renderer": "^2.1.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "redocusaurus": "^1.6.3",
     "rehype-katex": "5",
-    "remark-math": "3",
+    "remark-math": "6",
     "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.1.0"
+    "@docusaurus/module-type-aliases": "3.0.0"
   },
   "browserslist": {
     "production": [
