--- a/website/package.json
+++ b/website/package.json
@@ -14,20 +14,20 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@cmfcmf/docusaurus-search-local": "^1.0.0",
     "@docusaurus/core": "3.0.0",
     "@docusaurus/preset-classic": "3.0.0",
-    "@docusaurus/theme-mermaid": "^3.0.0",
+    "@docusaurus/theme-mermaid": "3.0.0",
     "@gabrielcsapo/docusaurus-plugin-matomo": "^0.1.2",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
+    "docusaurus-lunr-search": "^3.3.0",
     "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^2.1.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "redocusaurus": "^1.6.3",
-    "rehype-katex": "5",
+    "redocusaurus": "^2.0.0",
+    "rehype-katex": "7",
     "remark-math": "6",
     "unist-util-visit": "^4.1.2"
   },
@@ -47,7 +47,7 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   },
   "packageManager": "yarn@3.6.1"
 }
