Fix generation of Manpage for Docusaurus
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/md/_category_.yml
+++ b/docs/usage/md/_category_.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 position: 3.5
-label: "Man Pages"
+label: "Manpage"
 collapsible: true
 collapsed: true
 link:
