--- a/website/.yarnrc.yml
+++ b/website/.yarnrc.yml
@@ -1,5 +1,6 @@
 # SPDX-FileCopyrightText: 2023 Steffen Vogel <post@steffenvogel.de>
 # SPDX-License-Identifier: Apache-2.0
 
----
+compressionLevel: mixed
+enableGlobalCache: false
 nodeLinker: node-modules
