--- a/website/package.json
+++ b/website/package.json
@@ -14,25 +14,26 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
-    "@docusaurus/theme-mermaid": "3.0.0",
+    "@docusaurus/core": "^3.0.1",
+    "@docusaurus/preset-classic": "^3.0.1",
+    "@docusaurus/theme-common": "^3.0.1",
+    "@docusaurus/theme-mermaid": "^3.0.1",
+    "@docusaurus/utils": "^3.0.1",
     "@gabrielcsapo/docusaurus-plugin-matomo": "^0.1.2",
     "@mdx-js/react": "^3.0.0",
-    "clsx": "^1.2.1",
+    "@types/react": "^18.2.0",
+    "clsx": "^2.0.0",
     "docusaurus-lunr-search": "^3.3.0",
-    "hast-util-is-element": "1.1.0",
     "prism-react-renderer": "^2.1.0",
     "raw-loader": "^4.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "redocusaurus": "^2.0.0",
     "rehype-katex": "7",
-    "remark-math": "6",
-    "unist-util-visit": "^4.1.2"
+    "remark-math": "6"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.0.0"
+    "@docusaurus/module-type-aliases": "^3.0.1"
   },
   "browserslist": {
     "production": [
@@ -49,5 +50,5 @@
   "engines": {
     "node": ">=18.0"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@4.0.1"
 }
