docs: Embed discourse comments
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -6,3 +6,4 @@ stv0g:
   title: Maintainer of cunīcu
   url: https://github.com/stv0g
   image_url: https://github.com/stv0g.png
+  discourse: stv0g
