fix: Go linter errors and upgrade version
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -66,7 +66,7 @@ linters:
   - errname # Checks that sentinel errors are prefixed with the `Err` and error types are suffixed with the `Error`.
   - errorlint # errorlint is a linter for that can be used to find code that will cause problems with the error wrapping scheme introduced in Go 1.13.
   - exhaustive # check exhaustiveness of enum switch statements
-  - exportloopref # checks for pointers to enclosing loop variables
+  - copyloopvar
   - forcetypeassert # finds forced type assertions
   - gci # Gci control golang package import order and make it always deterministic.
   - gochecknoglobals # Checks that no globals are present in Go code
