fix(systemd): Make default paths for runtime config and RPC socket compatible with systemd
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/etc/cunicu.advanced.yaml
+++ b/etc/cunicu.advanced.yaml
@@ -21,7 +21,7 @@ backends:
 rpc:
   # Path to a Unix socket for management
   # and monitoring of the cunicu daemon.
-  socket: /var/run/cunicu.sock
+  socket: /run/cunicu.sock
 
   # Start of cunīcu daemon will block until
   # its unblocked via the control socket.
