--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -50,7 +50,11 @@ jobs:
     - name: Update version and vendor hashes in Nix derivation
       id: nix-update-hashes
       run: |
-        nix develop .#ci --command nix-update --flake --version ${{ steps.tags.outputs.next || steps.tags.outputs.current }} default
+        alias nix-update="nix develop .#ci --command nix-update --flake --version ${{ steps.tags.outputs.next || steps.tags.outputs.current }}"
+
+        nix-update gocov-merger
+        nix-update cunicu
+
         git diff --quiet || echo "changed=true" >> "$GITHUB_OUTPUT"
 
     - name: Commit changes
