feat(nix): Package helper scripts into its own derivation
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -54,6 +54,7 @@ jobs:
 
         nix-update gocov-merger
         nix-update cunicu
+        nix-update cunicu-scripts
 
         git diff --quiet || echo "changed=true" >> "$GITHUB_OUTPUT"
 
