--- a/REUSE.toml
+++ b/REUSE.toml
@@ -13,7 +13,7 @@ SPDX-FileCopyrightText = "2023-2025 Steffen Vogel <post@steffenvogel.de>"
 SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
-path = ["go.sum", "scripts/go.sum", "website/package.json", "website/yarn.lock", "nix/flake.lock", "docs/usage/**", ".renovaterc.json", "**.drawio", "**.svg", "flake.lock"]
+path = ["go.sum", "scripts/go.sum", "website/package.json", "website/yarn.lock", "nix/flake.lock", "nix/modules.json", "docs/usage/**", ".renovaterc.json", "**.drawio", "**.svg", "flake.lock"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2023-2025 Steffen Vogel <post@steffenvogel.de>"
 SPDX-License-Identifier = "Apache-2.0"
