fix(ci): Name of website workflow
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -105,7 +105,8 @@ jobs:
       GOARM: ${{ matrix.arm || '' }}
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Install dependencies
       if: ${{ matrix.host_os == 'linux' }}
