fix(ci): Move Flake check action to check workflow
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -14,3 +14,10 @@ on:
 jobs:
   reuse:
     uses: cunicu/.github/.github/workflows/reuse.yaml@v0.3.0
+
+  flake:
+    name: Check flake.lock
+    runs-on: ubuntu-24.04
+    steps:
+    - name: Check Nix flake inputs
+      uses: DeterminateSystems/flake-checker-action@v9
