--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -19,5 +19,11 @@ jobs:
     name: Check flake.lock
     runs-on: ubuntu-24.04
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
     - name: Check Nix flake inputs
       uses: DeterminateSystems/flake-checker-action@v9
+      with:
+        fail-mode: true
+        send-statistics: false
