--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -146,7 +146,7 @@ jobs:
 
     - name: Lint
       if: ${{ matrix.host_os != 'windows' }}
-      run: make lint LINT_OPTS=--timeout=15m
+      run: make lint
 
     - name: Run tests
       if: ${{ matrix.target_arch == matrix.host_arch && matrix.target_os == matrix.host_os && matrix.host_os != 'windows' }}
