--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -6,11 +6,15 @@
 name: Build website
 
 on:
-  workflow_dispatch:
-  pull_request:
   push:
     tags:
     - 'v*'
+  workflow_dispatch:
+  pull_request:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   deploy:
